apps/tailscale-exit-node-manager/deployment-web.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tailscale-exit-node-manager-web
  namespace: tailscale-exit-node-manager
  labels:
    app: tailscale-exit-node-manager-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tailscale-exit-node-manager-web
  template:
    metadata:
      labels:
        app: tailscale-exit-node-manager-web
    spec:
      imagePullSecrets:
        - name: tailscale-exit-node-manager-ghcr-pull
      containers:
        - name: web
          image: ghcr.io/member87/tailscale-exit-node-manager-web:36192a37b7c58a745ca3fa65f69292996e4ee8a2
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
