apps/tailscale-exit-node-manager/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tailscale-exit-node-manager-api
  namespace: tailscale-exit-node-manager
  labels:
    app: tailscale-exit-node-manager-api
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: tailscale-exit-node-manager-api
---
apiVersion: v1
kind: Service
metadata:
  name: tailscale-exit-node-manager-web
  namespace: tailscale-exit-node-manager
  labels:
    app: tailscale-exit-node-manager-web
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: tailscale-exit-node-manager-web
