apps/tailscale-exit-node-manager/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tailscale-exit-node-manager
  namespace: tailscale-exit-node-manager
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`exit-nodes.lab.jackhumes.com`)
      kind: Rule
      middlewares:
        - name: tinyauth-forwardauth
      services:
        - name: tailscale-exit-node-manager-web
          port: 3000
  tls:
    secretName: tailscale-exit-node-manager-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tailscale-exit-node-manager-http
  namespace: tailscale-exit-node-manager
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`exit-nodes.lab.jackhumes.com`)
      kind: Rule
      services:
        - name: tailscale-exit-node-manager-web
          port: 3000
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: tailscale-exit-node-manager
spec:
  redirectScheme:
    scheme: https
    permanent: true
